src/app/form/form.component.scss
@import '../../assets/scss/layout';
@import '../../assets/scss/breakpoint';
@import '../../assets/scss/color';
@import '../../assets/scss/typography';

$progressBar-height: 50px;

.form {
  position: fixed;
  background: white;
  width: 100vw;
  height: calc(100vh - #{$header-height} - #{$footer-height});
  top: #{$header-height};
  z-index: 9999;
  overflow: auto;
  @media #{$tablet} {
    height: calc(100vh);
    top: 0;
  }
  h3 {
    margin: 0;
  }
}

.footer {
  border-top: 1px solid $grey-4;
  padding: 17px;
  .btn {
    width: 149px;
    &.validate {
      background-color: $green-1;
    }
  }
  @media #{$tablet} {
    display: flex !important;
  }
}
.header {
  height: #{$header-height-phone};
  line-height: #{$header-height-phone};
  display: none;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  border-bottom: solid 1px $grey-4;
  background-color: $grey-1;
  color: $white;
  padding: 0 20px;
  @media #{$tablet} {
    display: block !important;
  }
}
.content {
  padding: 0 16px;
  display: block;
  overflow-y: auto;
  height: 100vh;

  h2 {
    @include cn-bold-28;
    color: $secondary-color;
    margin-bottom: 0;
  }
  h3 {
    margin: 0;
    @include cn-bold-22;
  }
  .page {
    @media #{$tablet} {
      height: calc(
        100vh - #{$header-height-phone} - #{$progressBar-height} - #{$footer-height-phone} - 1px
      ); // -1px because of header border
    }
    height: calc(
      100vh - #{$header-height} - #{$progressBar-height} - #{$footer-height} - #{$footer-height-phone}
    ); // -1px because of header border
    color: $grey-1;
    &.home {
      height: 100%;
      .btnStart {
        text-align: center;
      }
    }
    &.informations {
      ul {
        padding-left: 24px;
        li::marker {
          color: $secondary-color;
          font-size: 26px;
        }
        li > * {
          vertical-align: text-bottom;
        }
        li {
          @include cn-regular-18;
          line-height: 24px;
          margin: 10px 0;
        }
      }
    }
    .title {
      margin-bottom: 26px;
    }
    .type-picker {
      height: 100%;
    }
  }
  .titleDesc {
    @include cn-bold-20;
    margin-bottom: 20px;
  }
  p {
    margin-top: 10px;
    margin-bottom: 0;
    @include cn-regular-18;

    &.notRequired {
      font-style: italic;
      color: $secondary-color;
    }
  }
  .textareaBlock {
    max-width: 90%;

    textarea {
      padding: 13px 8px;
      background: $grey-6;
      border: 1px solid $grey-4;
      border-radius: 4px;
      resize: none;
      @include cn-regular-16;
    }
    p {
      text-align: right;
    }
  }
}

.btn {
  background: $secondary-color;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  border: 0;
  color: $white;
  height: 40px;
  width: 192px;
  @include btn-bold;

  &.invalid {
    opacity: 0.4;
  }

  &.start {
    margin-bottom: 26px;
  }
  &.previous {
    background-color: initial;
    color: $grey-2;
  }
}

.chevron {
  position: absolute;
  &:before,
  &:after {
    position: absolute;
    display: block;
    content: '';
    border: 7px solid transparent;
  }
  &.left {
    margin: 2px -19px;
    &:before {
      right: 0;
      border-right-color: inherit;
    }
    &:after {
      right: -2px;
      border-right-color: $white;
    }
  }
  &.right {
    margin: 2px 19px;

    &:before {
      left: 0;
      border-left-color: inherit;
    }
    &:after {
      left: -2px;
      border-left-color: $secondary-color;
    }
  }
}
.progressBar {
  height: #{$progressBar-height};

  progress {
    width: 100%;
    height: 6px;
    border-radius: 7px;
    &::-webkit-progress-bar {
      background-color: $white;
    }
    &::-webkit-progress-value {
      background-color: $secondary-color;
      border-radius: 12px;
    }
    &.validate {
      &::-webkit-progress-value {
        background-color: $green-1;
      }
    }
  }
  label {
    @include cn-bold-14;
    color: $secondary-color;
    min-width: 26px;
    &.validate {
      color: $green-1;
    }
  }
}
.form-group {
  margin-bottom: 26px;
}
input {
  margin-top: 4px;
  &.phone {
    width: 205px;
  }
  &.password {
    width: 256px;
  }
  &.structureName {
    width: 250px;
  }
}
img {
  &.eyePassword {
    padding: 0 2.5px; // Align to email input
    cursor: pointer;
    &:hover {
      opacity: 0.8;
    }
  }
}

// collapse
.collapse {
  width: 296px;
  border: 1px solid $grey-4;
  border-radius: 4px;
  cursor: pointer;
  margin-bottom: 13px;
  &.notCollapsed {
    margin-bottom: 8px;
    background: $grey-6;
  }
  .form-group {
    margin: 0;
    color: $grey-2;
    @include cn-regular-14;
    &.facebook {
      &:focus-within {
        svg {
          &.facebook {
            border-color: $secondary-color;
            fill: $secondary-color;
          }
        }
      }
    }
    &.instagram {
      &:focus-within {
        svg {
          &.instagram {
            border-color: $secondary-color;
            fill: $secondary-color;
          }
        }
      }
    }
    &.twitter {
      &:focus-within {
        svg {
          &.twitter {
            border-color: $secondary-color;
            fill: $secondary-color;
          }
        }
      }
    }
    &.linkedin {
      &:focus-within {
        svg {
          &.linkedin {
            border-color: $secondary-color;
            fill: $secondary-color;
          }
        }
      }
    }
  }
  .inputSection {
    input {
      width: 217px;
      margin-top: 8px;
      &.withIcon {
        border-radius: 0 4px 4px 0;
        border-left: 0;
      }
      &.nbEquipment {
        width: 55px;
      }
    }
    padding: 0px 15px 19px 12px;
    img {
      margin-top: 8px;
      padding-left: 41px;
      margin-right: -54px;
      &.nbEquipment {
        padding-left: 214px;
      }
    }
    svg {
      margin-top: 8px;
      width: 22px;
      height: 38px;
      fill: $grey-3;
      margin-right: 0;
      border: 1px solid $grey-4;
      border-radius: 4px 0 0 4px;
      border-right: 0;
      padding-left: 16px;
      background: $grey-6;
    }
  }
  .titleCollapse {
    width: 100%;
    @include cn-bold-16;
    color: $grey-2;
  }
  .collapseHeader {
    height: 65px;
    padding: 0 15px 0 12px;
  }
  .logo {
    height: 24px;
    width: 24px;
    svg {
      width: 100%;
      height: 100%;
      fill: $grey-1;
    }
  }
}

.tags {
  padding: 8px;
  button {
    background: $grey-6;
    border-radius: 20px;
    margin: 4px;
    max-width: 100%;
    height: 40px;
    padding: 0 13px;
    @include cn-bold-14;
    outline: none;
    border: none;
    &.selectedChoice {
      background: $green-1 !important;
      color: $white;
    }
  }
  svg {
    width: 20px;
    height: 10px;
    margin-right: 4px;
    stroke: $grey-6;
  }
}
.textBtn {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  width: 100%;
  margin-right: 12px;
}

